remove manual jvm memory args
For whatever stupid reason, setting memory size manually does result in
more crashes when using the world map plugin.